--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         <ul class="header-address">
           <li class="address-item">
             <a class="link" href="mailto:info@devstudio.com" title="info@devstudio.com">
-              <svg class="address-icon" width="16">
+              <svg class="address-icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>info@devstudio.com
             </a>
           </li>
           <li class="address-item">
+            <svg class="address-icon phone" width="10" height="16">
             <a class="link" href="tel:+380961111111" title="+38 096 111 11 11">
-              <svg class="address-icon phone" width="10">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>+38 096 111 11 11</a>
           </li>
@@ -427,8 +427,8 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="close-button" data-modal-close>
-          <svg class="close-icon"  width="30">
-            <use href="./images/icons.svg#icon-close"></use>
+          <svg class="close-icon"  width="18" height="18">
+            <use href="./images/icons.svg#icon-cross"></use>
           </svg>
         </button>
 
@@ -436,31 +436,42 @@
           <b class="form-title">Оставьте свои данные, мы вам перезвоним</b>
           <div class="form-field">
             <label for="name">Имя</label>
-            <input type="text" class="form-input" name="name" id="name">
-            <svg class="form-icon" width="18">
-              <use href="./images/icons.svg#icon-person"></use>
-            </svg>
+            <div class="input-wrapper">
+              <input type="text" class="form-input" name="name" id="name">
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-field">
             <label for="phone">Телефон</label>
-            <input type="tel" class="form-input" name="phone" id="phone">
-            <svg class="form-icon" width="18">
-              <use href="./images/icons.svg#icon-phone"></use>
-            </svg>
+            <div class="input-wrapper">
+              <input type="tel" class="form-input" name="phone" id="phone">
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-field">
             <label for="email">Почта</label>
-            <input type="email" class="form-input" name="email" id="email">
-            <svg class="form-icon" width="18">
-              <use href="./images/icons.svg#icon-email"></use>
-            </svg>
+            <div class="input-wrapper">
+              <input type="email" class="form-input" name="email" id="email">
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>              
+            </div>
           </div>
           <div class="form-field comment">
             <label for="comment">Комментарий</label>
             <textarea name="comment" id="comment" class="textarea" placeholder="Введите текст" cols="30" rows="10"></textarea>
           </div>
           <div class="form-field box">
-            <input type="checkbox" class="input-check" id="checkbox">
+            <input type="checkbox" class="input-check visually-hidden" id="checkbox">
+            <span class="check-wrapper">
+              <svg class="check-icon" width="16" height="15">
+                <use href="./images/icons.svg#icon-check"></use>
+              </svg>
+            </span>
             <label class="label-check" for="checkbox">
               Соглашаюсь с рассылкой и принимаю&ensp;<a href="#">Условия договора</a>
             </label>
