--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
           </div>
           <div class="form-field">
             <label for="email">Почта</label>
-            <div class="input-wrapper" tabindex="0">
+            <div class="input-wrapper">
               <input type="email" class="form-input" name="email" id="email">
               <svg class="form-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-email"></use>
