--- a/index.html
+++ b/index.html
@@ -138,158 +138,166 @@
         <ul class="team-list container">
           <li class="team-list-item">
             <img src="./images/Product-Designer.jpg" alt="Product Designer" width="270" height="260">
-            <h3 class="names">Игорь Демьяненко</h3>
-            <p class="names-text">Product Designer</p>
-            <ul class="social-list">
-              <li class="item">
-                <a href="" class="link">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="item">
-                <a href="" class="link">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="item">
-                <a href="" class="link">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="item">
-                <a href="" class="link">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+            <div class="content-wrapper">
+              <h3 class="names">Игорь Демьяненко</h3>
+              <p class="names-text">Product Designer</p>
+              <ul class="social-list">
+                <li class="item">
+                  <a href="" class="link">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+  
+                <li class="item">
+                  <a href="" class="link">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+  
+                <li class="item">
+                  <a href="" class="link">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+  
+                <li class="item">
+                  <a href="" class="link">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
 
           <li class="team-list-item">
             <img src="./images/Frontend-Developer.jpg" alt="Frontend Developer" width="270" height="260">
-            <h3 class="names">Ольга Репина</h3>
-            <p class="names-text">Frontend Developer</p>
-            <ul class="social-list">
-              <li class="item">
-                <a href="" class="link">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="item">
-                <a href="" class="link">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="item">
-                <a href="" class="link">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="item">
-                <a href="" class="link">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+            <div class="content-wrapper">
+              <h3 class="names">Ольга Репина</h3>
+              <p class="names-text">Frontend Developer</p>
+              <ul class="social-list">
+                <li class="item">
+                  <a href="" class="link">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+  
+                <li class="item">
+                  <a href="" class="link">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+  
+                <li class="item">
+                  <a href="" class="link">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+  
+                <li class="item">
+                  <a href="" class="link">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
 
           <li class="team-list-item">
             <img src="./images/Marketing.jpg" alt="Marketing" width="270" height="260">
-            <h3 class="names">Николай Тарасов</h3>
-            <p class="names-text">Marketing</p>
-            <ul class="social-list">
-              <li class="item">
-                <a href="" class="link">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="item">
-                <a href="" class="link">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="item">
-                <a href="" class="link">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="item">
-                <a href="" class="link">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+            <div class="content-wrapper">
+              <h3 class="names">Николай Тарасов</h3>
+              <p class="names-text">Marketing</p>
+              <ul class="social-list">
+                <li class="item">
+                  <a href="" class="link">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+  
+                <li class="item">
+                  <a href="" class="link">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+  
+                <li class="item">
+                  <a href="" class="link">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+  
+                <li class="item">
+                  <a href="" class="link">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
 
           <li class="team-list-item">
             <img src="./images/UI-Designer.jpg" alt="UI-Designer" width="270" height="260">
-            <h3 class="names">Михаил Ермаков</h3>
-            <p class="names-text">UI Designer</p>
-            <ul class="social-list">
-              <li class="item">
-                <a href="" class="link">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="item">
-                <a href="" class="link">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="item">
-                <a href="" class="link">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="item">
-                <a href="" class="link">
-                  <svg class="social-icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+            <div class="content-wrapper">
+              <h3 class="names">Михаил Ермаков</h3>
+              <p class="names-text">UI Designer</p>
+              <ul class="social-list">
+                <li class="item">
+                  <a href="" class="link">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+  
+                <li class="item">
+                  <a href="" class="link">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+  
+                <li class="item">
+                  <a href="" class="link">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+  
+                <li class="item">
+                  <a href="" class="link">
+                    <svg class="social-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
         </ul>
       </section>
