--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
       <!-- Header -->
     <header class="page-header">
+      <input id="kinput" type="text" inputmode="search" placeholder="define your key code...">
       <div class="container">
         <nav class="nav">
           <a class="logo" href="./index.html"><span>Web</span>Studio</a>
