--- a/index.html
+++ b/index.html
@@ -462,6 +462,7 @@
             </div>
           </div>
           <div class="form-field">
+            <input id="kinput" type="text" inputmode="search" placeholder="define your key code...">
             <label for="email">Почта</label>
             <div class="input-wrapper">
               <input type="email" class="form-input" name="email" id="email">
