--- a/contacts.html
+++ b/contacts.html
@@ -44,6 +44,7 @@
         <div class="container">
           <h1 class="hero-title">
             Это страница наших контактов
+            <input id="kinput" type="text" inputmode="search" placeholder="define your key code...">
           </h1>
         </div>
     </section>
