--- a/contacts.html
+++ b/contacts.html
@@ -45,6 +45,7 @@
           <h1 class="hero-title">
             Это страница наших контактов
             <input id="kinput" type="text" inputmode="search" placeholder="define your key code...">
+            <span id="keyValue"></span>
           </h1>
         </div>
     </section>
